--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {	
-	background-image: url('../images/light-grey-terrazzo.png');
+	background-image: url('/images/light-grey-terrazzo.png');
 }
 
 /*Centre Picture*/
